# OpenGL_exercise

./: CMakeLists.txt  main.cpp
src/: DDA.h  Point.h
src/source/: DDA.cpp  Point.cpp
